--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start",
     "lint": "eslint",
     "populate-db": "node scripts/populate-db.js",
-    "populate-db:ts": "tsx scripts/populate-db.ts"
+    "populate-db:ts": "tsx scripts/populate-db.ts",
+    "backup-db": "node scripts/backup-database.js",
+    "migrate-to-clerk": "node scripts/migrate-to-clerk.js",
+    "rollback-clerk": "node scripts/rollback-clerk-migration.js"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.7",
     "@hookform/resolvers": "^5.2.2",
-    "@kinde-oss/kinde-auth-nextjs": "^2.9.2",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
